Added a coffeescript driver. Added an output_type option, this way, less files become css and coffee files become js. Added at least one test for each driver.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vendor/CSSTidy"]
 	path = vendor/CSSTidy
 	url = https://github.com/Cerdic/CSSTidy.git
+[submodule "vendor/coffeescript"]
+	path = vendor/coffeescript
+	url = https://github.com/alxlit/coffeescript-php.git
